<resources>
    <string name="app_name">Airgohan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">ホスト</string>

    <string name="str_api_events">https://1bdsb.cybozu.com/k/v1/records.json?app=17</string>
    <string name="str_api_event">https://1bdsb.cybozu.com/k/v1/record.json</string>
    <string name="str_key_events">vaVTEdIif4BxzIHIMKfePlpZObZDrdvmkT1Puhh5</string>
    <string name="str_api_reserves">https://1bdsb.cybozu.com/k/v1/records.json?app=18</string>
    <string name="str_api_reserve">https://1bdsb.cybozu.com/k/v1/record.json</string>
    <string name="str_key_reserves">wrrzunPNpjPgRt8tDiBKIZ72arx2TcCeyWwh6sun</string>
    <string name="str_api_users">https://1bdsb.cybozu.com/k/v1/records.json?app=19</string>
    <string name="str_api_user">https://1bdsb.cybozu.com/k/v1/record.json</string>
    <string name="str_key_users">tSMQQiGBE9Rky08bOGkg8FkUeGgG6LUgICb0ByQx</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint">どちらでお食事ですか？</string>
    <string name="main_title">いただきます</string>
    <string name="main_subtitle">190カ国超の地元の家で、楽しい食事をしょう</string>
    <string name="search_title">ご飯を探索</string>
    <string name="search_subtitle">みんなどんなご飯を食べてるの？見てみよう。</string>

    <string name="wa_eat">和食</string>
    <string name="yo_eat">洋食</string>
    <string name="chu_eat">中華</string>
    <string name="fre_eat">フレンチ</string>

    <string name="search_where">どこで食事？</string>
    <string name="search_time">食事時間</string>
    <string name="search_eat">食べたいもの</string>
    <string name="search_target">対象人数</string>
    <string name="search_button">探してみる</string>
    <string name="search_genre">どのジャンル？</string>
    <string name="search_titile">検索</string>

    <string name="share_titile">検索結果</string>
    <string name="reserve_button">予約をリクエスト</string>
    <string name="reserve_cancel_button">予約をキャンセル</string>
    <string name="reserve_target">参加人数</string>
    <string name="reserve_time">参加時間</string>

    <string name="food_genre">ジャンル</string>
    <string name="food_main">メイン料理</string>
    <string name="food_comment">コメント</string>

    <string name="create_name">名前は？</string>
    <string name="create_address">どこで食べる？</string>
    <string name="create_genre">どのジャンル？</string>
    <string name="create_main_menu">メインメニューは？</string>
    <string name="create_max_members">対象人数は？</string>
    <string name="create_start_time">開始時刻は？</string>
    <string name="create_finish_time">終了時刻は？</string>
    <string name="btn_create">この予定をたてる</string>

</resources>
