<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:id="@+id/fragment"
    android:background="@android:color/white"
    tools:context="com.airgohan.airgohan.SearchFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/whereText"
            android:hint="@string/search_where"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeText"
            android:inputType="date"
            android:layout_marginTop="15dp"
            android:hint="@string/search_time"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genreText"
            android:layout_marginTop="15dp"
            android:hint="@string/search_genre"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eatText"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:hint="@string/search_eat"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/targetText"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:hint="@string/search_target"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:text="@string/search_button"
            android:background="@color/theme_color"/>
    </LinearLayout>
</FrameLayout>
